# IFG

./: .gitignore  .~lock.functionalGroupData.xlsx#  DepreciatedIFG.py  FGheirarchy.txt  FGlist.txt  FunctionalGroups.xlsx  LICENSE  README.md  SMILES.txt  allData.json  analysis.py  config.py  dataManipulators.py  functionalGroupData.xlsx  gatherifgdata.py  ifg.py  ifgClass.py  index.py  main.py  masterSmiles.txt  molecule.py  preciseData.json  pyproject.toml  smiles.py  smiles.txt  smilesWH.txt  test.py
.github/workflows/: deploy-sphinx-docs.yaml
docs/source/: conf.py  configurations.rst  constants.rst  contributing.rst  data_analysis.rst  data_collection.rst  design.rst  edge.rst  implementation.rst  index.rst  installation.rst  molecule.rst  setup.rst  smiles.rst  theory.rst  vertex.rst
ifg/chem/: constants.py  edge.py  molecule.py  vertex.py
ifg/scripts/: analysis.ipynb  analysis.py  csv_processor.py  main.ipynb  (+1 more)
output/: FunctionalGroups.xlsx  FunctionalGroupsTest.xlsx  Functional_Groups.xlsx
resources/: BenWillSmiles.txt  CurrentRefcodeSmiles.txt  FGlist.txt  masterSmiles.txt  smiles.txt
src/: Atom.py  Edge.py  FGlist.txt  FgTesting.xlsx  Molecule.py  MoleculeTest.py  Vertex.py  constants.py  edge.py  helpers.py  ifg.py  ifgTest.py  main.py  molecule.py  moleculeTest.py  notes.txt  smiles.py  test.py  testHelper.py  vertex.py
statistical scripts/: CNN_BG.ipynb  lowest_50.ipynb  matrix_generator.ipynb  preciseData.json  relations_generator.ipynb
tests/: __init__.py  moleculeTest.py  molecule_test.py  performanceTest.py  test.py  testAtom.py  testIfg.py
(+39 files in other folders)
