[tool.poetry]
name = "ifg"
version = "0.1.0"
description = "A library to identify functional groups from SMILES codes"
authors = ["William Riddle <wtriddle31@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.4"
tqdm = "^4.64.1"
XlsxWriter = "^3.0.3"
openpyxl = "^3.0.10"
Sphinx = "4.5.0"
ipykernel = "^6.16.0"
flake8 = "^5.0.4"
pylint = "^2.15.4"
pytest = "^7.1.3"
numpy = "^1.23.3"
progress = "^1.6"
docxsphinx = "^1.0.0"
sphinx-book-theme = "^0.3.3"
jupyterlab = "^3.4.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
